--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/cli-platform-android": "^9.3.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
@@ -18,6 +19,7 @@
     "react-native-date-picker": "^4.2.6",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-image-crop-picker": "^0.38.1",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
@@ -33,6 +35,7 @@
     "@types/jest": "^29.2.2",
     "@types/react": "^18.0.25",
     "@types/react-native": "^0.70.6",
+    "@types/react-native-vector-icons": "^6.4.12",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
