--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/cli-platform-android": "^9.3.1",
     "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
     "react": "18.1.0",
@@ -20,10 +21,12 @@
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "^0.38.1",
+    "react-native-pager-view": "^6.1.0",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-tab-view": "^3.3.0",
     "react-native-ui-lib": "^6.23.2",
     "react-native-vector-icons": "^9.2.0"
   },
