--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-date-picker": "^4.2.6",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "^0.38.1",
+    "react-native-infinite-scroll": "^1.0.6",
     "react-native-pager-view": "^6.1.0",
     "react-native-paper": "^4.12.5",
     "react-native-reanimated": "^2.12.0",
@@ -28,7 +30,8 @@
     "react-native-screens": "^3.18.2",
     "react-native-tab-view": "^3.3.0",
     "react-native-ui-lib": "^6.23.2",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
