--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -217,6 +217,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            storeFile file('your_key_name.keystore')
+            storePassword 'DreamDevFast@123'
+            keyAlias 'your_key_alias'
+            keyPassword 'DreamDevFast@123'
+        }
     }
     buildTypes {
         debug {
@@ -225,7 +231,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
