--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@react-native-community/cli-platform-android": "^9.3.1",
+    "@react-native-firebase/app": "^16.4.4",
+    "@react-native-firebase/auth": "^16.4.4",
+    "@react-native-firebase/firestore": "^16.4.5",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.4",
+    "@reduxjs/toolkit": "^1.9.0",
+    "@types/react-redux": "^7.1.24",
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
@@ -31,7 +36,10 @@
     "react-native-tab-view": "^3.3.0",
     "react-native-ui-lib": "^6.23.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
