--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-native-gesture-handler": "^2.8.0",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-infinite-scroll": "^1.0.6",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.1.0",
     "react-native-paper": "^4.12.5",
+    "react-native-range-slider": "^0.1.2",
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
@@ -40,7 +42,8 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "rn-range-slider": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
