--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-date-picker": "^4.2.6",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "^2.8.0",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-infinite-scroll": "^1.0.6",
     "react-native-linear-gradient": "^2.6.2",
