--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-gifted-chat": "^1.0.4",
     "react-native-image-crop-picker": "^0.38.1",
     "react-native-infinite-scroll": "^1.0.6",
+    "react-native-lightbox-v2": "^0.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-pager-view": "^6.1.0",
     "react-native-paper": "^4.12.5",
