--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-smtp-mailer": "^1.2.5",
     "react-native-tab-view": "^3.3.0",
     "react-native-ui-lib": "^6.23.2",
     "react-native-vector-icons": "^9.2.0",
