--- a/firebase-admin/bp-common/package.json
+++ b/firebase-admin/bp-common/package.json
@@ -35,15 +35,18 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/x-data-grid": "^5.17.13",
+    "core-js": "^3.26.1",
     "firebase": "^9.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^5.0.7",
     "recharts": "^2.1.16",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "regenerator-runtime": "^0.13.11"
   },
   "devDependencies": {
+    "@babel/plugin-transform-regenerator": "^7.16.7",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
