--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -265,6 +265,7 @@ dependencies {
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation "com.google.firebase:firebase-analytics"
     implementation "androidx.browser:browser:1.2.0"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
