--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-redux": "^7.1.24",
+    "deprecated-react-native-prop-types": "^3.0.1",
     "moment": "^2.29.4",
+    "patch-package": "^6.5.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-confirmation-code-field": "^7.3.1",
     "react-native-date-picker": "^4.2.6",
     "react-native-element-dropdown": "^2.3.1",
     "react-native-gesture-handler": "^2.8.0",
@@ -38,7 +41,6 @@
     "react-native-reanimated": "^2.12.0",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-smtp-mailer": "^1.2.5",
     "react-native-tab-view": "^3.3.0",
     "react-native-ui-lib": "^6.23.2",
     "react-native-vector-icons": "^9.2.0",
