--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/stack": "^6.3.4",
     "@reduxjs/toolkit": "^1.9.0",
     "@types/react-redux": "^7.1.24",
+    "axios": "^1.2.1",
     "deprecated-react-native-prop-types": "^3.0.1",
     "moment": "^2.29.4",
     "patch-package": "^6.5.0",
