--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-firebase/app": "^16.4.4",
     "@react-native-firebase/auth": "^16.4.4",
     "@react-native-firebase/firestore": "^16.4.5",
+    "@react-native-firebase/messaging": "^16.5.0",
     "@react-native-firebase/storage": "^16.4.5",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/material-top-tabs": "^6.3.0",
